--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,6 +1,7 @@
 /* Google Fonts Import Link */
 @use 'Sidebar';
 @use 'Clientes';
+@use 'Login';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
