--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -117,3 +117,28 @@ h1 {
 #cuerpoAyuda{
   padding-top: 50px;
 }
+
+/*******************ACTIVO U DESACTIVO**************************/
+
+.activo{
+  color: green;
+}
+
+.desactivo{
+  color: red;
+}
+
+/**************************************************************/
+.buttone{
+  background-color: rgb(11, 140, 253);
+    padding: 20px;
+    display: flex;
+    text-decoration: none;
+    border-radius: 10px;
+    margin: 20px;
+    color: white;
+
+  Col{
+    text-align: center;
+  }
+}
