--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -2,6 +2,8 @@
 @use 'Sidebar';
 @use 'Clientes';
 @use 'Login';
+@use 'Inventario';
+@use 'Ventas';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
