--- a/src/assets/_Ventas.scss
+++ b/src/assets/_Ventas.scss
@@ -4,3 +4,20 @@
     z-index: 1;
     background-color: #fff;
 }
+
+.detalle-venta {
+    min-width: min-content;
+
+    .columna-numerica {
+        text-align: end;
+    }
+}
+
+.productos-card {
+    width: fit-content;
+}
+
+.cliente-card {
+    width: 650px;
+}
+
